# bmad-doc-ai-agent

./: .env.example  AGENTS.md  README.md  pyproject.toml
bmad_agent/: __init__.py  api_client.py  cli.py  config.py  setup_wizard.py  tray.py  watcher.py
