[project]
name = "bmad-doc-ai-agent"
version = "1.0.0"
description = "Desktop-Agent: Lokaler Ordner-Watcher → BMAD-Doc-AI Upload"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
bmad-agent = "bmad_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bmad_agent"]
